infra/k8s/auth-service/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: auth-service
  namespace: natairankrat-dev
spec:
  to:
    kind: Service
    name: auth-service
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
